Make use of Path.of() method