@@ -1,7 +1,6 @@
 package io.kojan.runit.api.context;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import io.kojan.javadeptools.rpm.RpmFile;
 import io.kojan.runit.api.FileContext;
@@ -14,7 +13,7 @@ class FileContextImpl extends PackageContextImpl implements FileContext {
 
     public FileContextImpl(PackageContext packageContext, RpmFile rpmFile, byte[] content) {
         super(packageContext);
-        this.filePath = Paths.get(rpmFile.getName());
+        this.filePath = Path.of(rpmFile.getName());
         this.rpmFile = rpmFile;
         this.content = content;
     }
